--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 dnspython==2.2.0
 heroku3==4.2.1
 motor==3.3.2 # 2.5.1
-pyrotgfork==2.1.29
-TgCrypto==1.2.5
+pyrotgfork==2.1.32.1
+PyTgCrypto==1.2.7
